Mount frr sockets

--- a/deploy/node-init.yaml
+++ b/deploy/node-init.yaml
@@ -97,4 +97,11 @@ spec:
               fieldPath: spec.nodeName
         securityContext:
           privileged: true
+        volumeMounts:
+        - mountPath: /var/run/frr
+          name: frrsockets
       hostNetwork: true
+      volumes:
+      - name: frrsockets
+        hostPath:
+          path: /var/run/frr
