--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -31,10 +31,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Set up Go 1.21
-      uses: actions/setup-go@v4
+    - name: Set up Go
+      uses: actions/setup-go@v5
       with:
-        go-version: "1.21"
+        go-version-file: 'go.mod'
 
     - name: Lint
       uses: golangci/golangci-lint-action@v3
